hphp/test/slow/case-types/recursion-1.php.expectf
Fatal error: Unknown type or class HH\int|C1 in %s on line 5
